ASUCourseTracker.API/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: asu-course-tracker
  labels:
    name: asu-course-tracker
